--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin: 0 auto;
+  width: 40%;
+  border: 1px solid red;
+  background-color: rosybrown;
+  height: 500px;
+  border-radius: 10px;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 70px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  border-radius: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header h2 {
+  font-size: 30px;
+  text-transform: uppercase;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo-list {
+  /* margin: 50px; */
+  /* padding: 20px;  */
+}
+
+.list {
+  margin: 10px;
+  
+  /* width: 40%; */
+  
+}
+
+.list-input {
+  width: 400px;
+  margin-top: 12px;
+  padding: 7px;
+  border-radius: 15px;
 }
